--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.3"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.6.3",
+    "tailwindcss": "^3.3.2"
   }
 }
